--- a/.gitattributes
+++ b/.gitattributes
@@ -122,3 +122,7 @@
 *.meta              linguist-generated
 *.prefab            linguist-generated
 *.unity             linguist-generated
+
+*.unity binary
+*.prefab binary
+*.asset binary
